# openducktor

./: .gitignore  .gitnexusrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  PLAN.md  PRD.md  PRODUCT.md  README.md  SECURITY.md  biome.json  bunfig.toml  codemap.md  doctor.config.json  knip.config.ts  manifest  package.json  skills-lock.json  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  bundle.sidecars.json  codemap.md  tauri.cef-dev.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: codemap.md  default.json
apps/desktop/src-tauri/crates/: codemap.md
apps/desktop/src-tauri/crates/host-application/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/host-application/src/: codemap.md  lib.rs
apps/desktop/src-tauri/crates/host-application/src/app_service/: build_orchestrator.rs  codemap.md  dev_server_manager.rs  events.rs  filesystem.rs  git_operations.rs  git_paths.rs  git_provider.rs  git_worktrees.rs  hook_security.rs  mcp_bridge_discovery.rs  mcp_bridge_process.rs  mcp_bridge_registry.rs  mod.rs  odt_mcp.rs  open_in_tools.rs  opencode_runtime.rs  opencode_session_status.rs  process_registry.rs  qa_worktree.rs  repo_init.rs  runtime_orchestrator.rs  runtime_registry.rs  runtime_session_status.rs  runtime_startup.rs  service_core.rs  startup_metrics.rs  system_checks.rs  system_workspace_git.rs  task_enrichment.rs  task_workflow.rs  test_support.rs  workflow_rules.rs  workspace_policy.rs  workspace_settings.rs
apps/desktop/src-tauri/crates/host-application/src/app_service/build_orchestrator/: build_cleanup.rs  build_lifecycle.rs  build_run_control.rs  build_runtime_setup.rs  build_start.rs  codemap.md  mod.rs  session_stop.rs  (+1 more)
apps/desktop/src-tauri/crates/host-command-services/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/host-command-services/src/: command_payloads.rs  lib.rs
apps/desktop/src-tauri/crates/host-command-services/src/command_services/: codemap.md  error.rs  issue_type.rs  mod.rs  tasks.rs
apps/desktop/src-tauri/crates/host-domain/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/host-domain/src/: codemap.md  document.rs  git.rs  lib.rs  runtime.rs  store.rs  system.rs  task.rs
apps/desktop/src-tauri/crates/host-domain/src/runtime/: codemap.md  events.rs  mod.rs  registry.rs  route.rs  state.rs
apps/desktop/src-tauri/crates/host-infra-beads/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/host-infra-beads/src/: codemap.md  command_runner.rs  constants.rs  document_storage.rs  execution.rs  initialization.rs  lib.rs  metadata.rs  metadata_ops.rs  model.rs  normalize.rs  parsing.rs  store.rs  tests.rs
apps/desktop/src-tauri/crates/host-infra-beads/src/lifecycle/: codemap.md  context.rs  coordinator.rs  error.rs  mod.rs  provisioner.rs  verifier.rs
apps/desktop/src-tauri/crates/host-infra-beads/src/store/: cache.rs  codemap.md  doc_ops.rs  namespace.rs  session_ops.rs  task_ops.rs
apps/desktop/src-tauri/crates/host-infra-beads/src/tests/: lifecycle.rs  parsing.rs  persistence_docs.rs  persistence_sessions.rs  persistence_tasks.rs  support.rs
apps/desktop/src-tauri/crates/host-infra-system/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/host-infra-system/src/: beads.rs  codemap.md  config.rs  filesystem.rs  git.rs  lib.rs  open_in.rs  process.rs  user_paths.rs  worktree.rs
apps/desktop/src-tauri/crates/host-infra-system/src/beads/: codemap.md  repo_paths.rs  shared_dolt_server.rs  tests.rs
apps/desktop/src-tauri/crates/host-infra-system/src/config/: codemap.md  migrate.rs  mod.rs  normalize.rs  persistence.rs  security.rs  store.rs  types.rs  workspace_icons.rs
apps/desktop/src-tauri/crates/host-infra-system/src/git/: branch.rs  codemap.md  commit.rs  hash.rs  merge.rs  mod.rs  remote.rs  reset.rs  status.rs  tests.rs  util.rs  worktree.rs
apps/desktop/src-tauri/crates/host-test-support/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/host-test-support/src/: codemap.md  lib.rs
apps/desktop/src-tauri/crates/web-host/: Cargo.toml  codemap.md
apps/desktop/src-tauri/crates/web-host/src/: command_helpers.rs  external_task_sync.rs  lib.rs  main.rs  pull_request_sync.rs  shutdown.rs  startup.rs
apps/desktop/src-tauri/crates/web-host/src/commands/: documents.rs  mod.rs  workspace.rs
apps/desktop/src-tauri/crates/web-host/src/headless/: codemap.md  command_registry.rs  command_support.rs  events.rs  git_commands.rs  odt_mcp_commands.rs  server_tests.rs  task_commands.rs  workspace_commands.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: app_state.rs  codemap.md  command_helpers.rs  command_payloads.rs  command_registry.rs  external_task_sync.rs  headless.rs  lib.rs  logging.rs  macos_cef_quit.rs  main.rs  pull_request_sync.rs  shutdown.rs  sse_relay.rs  startup.rs
apps/desktop/src-tauri/src/command_services/: codemap.md  error.rs  mod.rs  tasks.rs
apps/desktop/src-tauri/src/command_services/git/: codemap.md  mod.rs  requests.rs  snapshot.rs
apps/desktop/src-tauri/src/command_services/git/authorization/: codemap.md  metadata.rs  mod.rs
apps/desktop/src-tauri/src/commands/: agent_sessions.rs  build.rs  codemap.md  command_registry.rs  documents.rs  filesystem.rs  git.rs  issue_type.rs  mod.rs  runtime.rs  system.rs  tasks.rs  workspace.rs
apps/desktop/src-tauri/src/commands/git/: authorization.rs  codemap.md  command_handlers.rs  mod.rs  snapshot.rs
apps/desktop/src-tauri/src/commands/git/authorization/: cache.rs  codemap.md  listing.rs  mod.rs  resolution.rs
apps/desktop/src-tauri/src/commands/git/tests/: authorization.rs  command_handlers.rs  fixtures.rs  mod.rs  snapshot.rs
apps/desktop/src-tauri/src/headless/: codemap.md  command_registry.rs  command_support.rs  events.rs  filesystem_commands.rs  git_commands.rs  mod.rs  odt_mcp_commands.rs  runtime_commands.rs  server.rs  server_tests.rs  system_commands.rs  task_commands.rs  workspace_commands.rs
apps/desktop/src-tauri/src/headless/command_registry/: git_parity_tests.rs
(+1496 files in other folders)
