[package]
name = "openducktor-desktop"
version = "0.0.1"
description = "OpenDucktor Desktop"
authors = ["OpenDucktor"]
edition = "2021"
default-run = "openducktor-desktop"

[workspace]
members = [
  "crates/host-application",
  "crates/host-domain",
  "crates/host-infra-beads",
  "crates/host-infra-system",
  "crates/host-test-support",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[lib]
name = "openducktor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openducktor-desktop"
path = "src/main.rs"

[[bin]]
name = "browser_backend"
path = "src/bin/browser_backend.rs"

[build-dependencies]
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
ctrlc = "3"

host-domain = { path = "crates/host-domain" }
host-application = { path = "crates/host-application" }
host-infra-beads = { path = "crates/host-infra-beads" }
host-infra-system = { path = "crates/host-infra-system" }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
