[package]
name = "host-application"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
host-domain = { path = "../host-domain" }
host-infra-system = { path = "../host-infra-system" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
