[package]
name = "host-command-services"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
host-application = { path = "../host-application" }
host-domain = { path = "../host-domain" }
host-infra-system = { path = "../host-infra-system" }

[dev-dependencies]
host-infra-beads = { path = "../host-infra-beads" }
