[package]
name = "host-infra-beads"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
host-domain = { path = "../host-domain" }
host-infra-system = { path = "../host-infra-system" }
