[package]
name = "host-infra-beads"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
host-domain = { path = "../host-domain" }
host-infra-system = { path = "../host-infra-system" }
