[package]
name = "host-infra-beads"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
host-domain = { path = "../host-domain" }
host-infra-system = { path = "../host-infra-system" }

[dev-dependencies]
host-test-support = { path = "../host-test-support" }
