[package]
name = "host-infra-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
host-domain = { path = "../host-domain" }
