[package]
name = "host-infra-system"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rayon = "1"
libc = "0.2"
host-domain = { path = "../host-domain" }

[dev-dependencies]
host-test-support = { path = "../host-test-support" }
