[package]
name = "host-infra-system"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
rayon = "1"
libc = "0.2"
fs2 = "0.4"
sysinfo = "0.38"
url = "2"
host-domain = { path = "../host-domain" }

[dev-dependencies]
host-test-support = { path = "../host-test-support" }
